maybe this would fix the repeat on iphone

--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 @media screen and (max-width: 1284px) and (min-aspect-ratio: 19.5/9) {
   body {
     background-image: url('asst/pillar_of_creation-min.jpeg') ;
-    background-size: 100vw 100vh;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
     min-width: 100vw;
-
+    max-height: 100vh;
+    max-width: 100vw;
     
   }
 
@@ -25,12 +26,14 @@
 
   body {
     background-image: url('asst/pillar_of_creation-min.jpeg');
-    background-size: 100vw 100vh;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
     margin: 0;
     min-height: 100vh;
     min-width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
   }
 
   .project {
